crates/forge_main/src/domain/transformer/snapshots/forge_main__domain__transformer__transform_tool_calls__tests__transform_tool_calls_handles_empty_tool_outputs.snap
---
source: crates/forge_main/src/domain/transformer/transform_tool_calls.rs
expression: snapshot
---
transformation: TransformToolCalls
before:
  messages:
    - tool:
        name: empty_tool
        call_id: call_empty
        output:
          is_error: false
          values:
            - empty
after: {}
