crates/forge_main/src/domain/transformer/snapshots/forge_main__domain__transformer__transform_tool_calls__tests__transform_tool_calls_removes_tool_calls_from_assistant.snap
---
source: crates/forge_main/src/domain/transformer/transform_tool_calls.rs
expression: snapshot
---
transformation: TransformToolCalls
before:
  messages:
    - text:
        role: System
        content: System message
    - text:
        role: Assistant
        content: "I'll help you"
        tool_calls:
          - name: test_tool
            call_id: call_123
            arguments:
              param: value
    - tool:
        name: test_tool
        call_id: call_123
        output:
          is_error: false
          values:
            - text: Tool result text
after:
  messages:
    - text:
        role: System
        content: System message
    - text:
        role: Assistant
        content: "I'll help you"
    - text:
        role: User
        content: Tool result text
